--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,22 @@
 body {
   font-family: sans-serif;
 }
+
+nav {
+  border: 1px solid black;
+  border-radius: 12px;
+  margin-bottom: 12px;
+}
+
+nav ul {
+  padding: 0;
+  margin: 12px;
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li.current {
+  font-weight: bold;
+}
